--- a/src/views/qrcode.ejs
+++ b/src/views/qrcode.ejs
@@ -7,7 +7,7 @@
   <title>API Pix | GerenciaNet | Wise Records</title>
 </head>
 <body>
-  <h2>QRCode Pix</h2>
+  <h2>QRCode Pix du Danielzin 10 centavin</h2>
   <img src="<%=  qrCodeImage %>">
 </body>
 </html>
